added new changes

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
   <h1>welcome to moringa school</h1>  >
 <h3>my hobbies</h3>
+<img src="images/Screenshot from 2025-02-18 10-38-17.png" alt="">
     <ul>
  <li>gaming</li>
 <li>cooking</li>
 <li>dancing</li>
 <li>coding</li>
-
-<ul>
+</ul>
+</ol>
 <h3>my pets</h3>
 <li>dog</li>
 <li>cat</li>
 <ol>
   <p>hello word</p>
-  
+  img[]
