--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>my first website</title>
-   <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1>welcome to moringa school</h1>  >
-<h3>my hobbies</h3>
-<img src="images/Screenshot from 2025-02-18 10-38-17.png" alt="">
-    <ul>
- <li>gaming</li>
-<li>cooking</li>
-<li>dancing</li>
-<li>coding</li>
-</ul>
+    <title>game awards</title><link rel="stylesheet" href="css/style.css">
+    <head><h1>awards for the centary</h1>
+        <img src="image/Year End Party Year End Trophy Champion Background Wallpaper Image For Free Download - Pngtree.jpeg" alt="">
+<h2>titles</h2>
+<ol><li> mirage</li>
+    <img src="image/Assassin's Creed Mirage.jpeg" alt="">
+    <li>call of duty</li>
+    <img src="image/Pin on Wallpaper of Awesomeness.jpeg" alt="">
+    <li>need for speed</li>
+    <img src="image/nfs unbound.jpeg" alt="">
+    <li>fifa 25</li>
+    <img src="image/New EA FC 25.jpeg" alt="">
+    <li>witcher</li>
+    <img src="image/The Witcher ✖️.jpeg" alt="">
 </ol>
-<h3>my pets</h3>
-<li>dog</li>
-<li>cat</li>
-<ol>
-  <p>hello word</p>
-  
+<h2>gratest characters of all time</h2>
+<ol><li>aurthor mogan</li>
+<img src="image/Arthur Morgan.jpeg" alt="">
+<li>ezio auditore</li>
+<img src="image/Ezio Auditore, Rachel (Crymsie) Nash.jpeg" alt="">
+<li>john marston</li>
+<img src="image/07b614bc-77b4-4f01-9cb4-9a6389c2f3a7.jpeg" alt="">
+<li>jacob fry</li>
+<img src="image/革命 Jacob Frye _💡.jpeg" alt="">
+
+</ol>
+
+
+
+<body>
+    
+</body>
+</html>
